# fastexpm

./: CMakeLists.txt  install.sh
include/: cuapi.h  expm.h  iomatrix.h  util.h
src/: _expm.cu  _io.cu  cuapi.cu  main.cpp  util.cu
